--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,8 +33,8 @@ html {
     list-style-type: none;
     margin: 0 auto;
 
-    outline: 2px solid red;
-    width: 1600px;
+    /* outline: 2px solid red; */
+    /* width: 1600px; */
 }
 
 /* button {
@@ -194,13 +194,7 @@ html {
     background-image: url(../images/background.jpg);
     background-repeat: no-repeat;
     background-position: center;
-
-
-    /* padding-top: 200px;
-    padding-bottom: 200px;
-    outline: 2px solid red; */
 }
-
 
 .hero-title {
     font-weight: 900;
@@ -213,38 +207,35 @@ html {
 
     margin: 0;
     margin-bottom: 30px;
-    padding-top: 200px;
-    /* margin-top: 0; */
-
 }
 
 .hero-conteiner {
+    padding-top: 200px;
     padding-bottom: 200px;
 }
 
 /* Button main page*/
 .btn {
-    display: inline-block;
-    margin: 0 auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px 32px;
+
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border: 4px;
-
-
     background-color: var(--accent-color);
 
-    font-family: Roboto, sans-serif;
-    font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.89;
     text-align: center;
-    /* align-items: center; */
     letter-spacing: 0.06em;
     color: var(--hero-text-color);
     cursor: pointer;
 
 }
+
+
 
 .hero .btn:hover,
 .btn:focus {
@@ -427,12 +418,10 @@ html {
 /* Buttons */
 .box {
     list-style-type: none;
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 
 .button {
-    font-family: Roboto, sans-serif;
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -444,6 +433,9 @@ html {
     margin-bottom: 50px;
 
     cursor: pointer;
+    border-radius: 4px;
+    border: none;
+
 
     /* background-color: var(--accent-bg-color);  потом добавить*/
 }
@@ -456,7 +448,7 @@ html {
 .box-button {
     list-style-type: none;
     /* delete later */
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 
 .button-list {
@@ -476,7 +468,7 @@ html {
 /* Projects */
 .box-projects {
     /* delete later */
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 
 /* .works-pictures {
@@ -507,7 +499,7 @@ html {
     color: var(--secondaty-text-color);
 }
 
-.box-projects .projects {
+.projects {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
